fix(CheckboxRadioTemplate): ensure to remove spacing/gap when label is hidden (#427)

--- a/packages/react/src/components/_CheckboxRadioTemplate/CheckboxRadioTemplate.module.css
+++ b/packages/react/src/components/_CheckboxRadioTemplate/CheckboxRadioTemplate.module.css
@@ -27,6 +27,10 @@
   --gap: var(--component-checkbox-space-gap-small);
 }
 
+.template.hiddenLabel {
+  --gap: 0;
+}
+
 .template:not(.disabled):hover {
   --label-color: var(--component-checkbox-color-text-hover);
 }
